[intern] applied jalopy source code formatting -> reduced checkstyle warnings to about 20.000, disabled some checks as suggested by redsolo, re-enabled whitespace/tab checks